selection in input(text area) bug fix and add text-align:left

--- a/css/module.dictlayer.css
+++ b/css/module.dictlayer.css
@@ -8,6 +8,7 @@ author @huntbao*/
     transition: opacity .38s;
     opacity: 0;
     z-index: 2147483647 !important;
+    text-align: left;
 }
 
 .jz-mod-dict-layer.jz-opacity-ani {
